Fix Dark Mode Glitch

--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,6 @@ a:visited {
   color: #01b3af;
 }
 
-.home .container #role
-{
-  color: #272341;
-}
-
 .home .container .typed-cursor {
   color: #272341;
 }
